<resources>
    <string name="app_name">Contacts</string>
    <string name="insert_title">Insert title</string>
    <string name="insert_author">Insert author</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_address">Insert address</string>
    <string name="insert_phone_number">Insert phone number</string>
    <string name="insert_last_name">Insert last name</string>
    <string name="insert_name">Insert name(s)</string>
    <string name="select_contact">Please select a contact</string>

    <string name="please_insert">Please insert a value</string>
    <string name="contacts">CONTACTS</string>
</resources>
