<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/padding_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textSize="26dp"
            android:layout_weight="1"
            android:fontFamily="helvetica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textColor="@color/blueTitle"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="1"
            
            />

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etName"
        android:layout_weight="1"
        android:hint="@string/insert_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_weight="1"
        android:hint="@string/insert_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>

    <EditText
        android:id="@+id/etPhone"
        android:hint="@string/insert_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etStreet"
        android:hint="@string/insert_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:id="@+id/btnAdd"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btnUpdate"
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btnDelete"
            android:text="@string/delete"
            android:textColor="@color/brownDel"
            android:backgroundTint="@color/redDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <ListView
        android:id="@+id/lvContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>
</LinearLayout>